--- a/style.css
+++ b/style.css
@@ -6,7 +6,16 @@
 body {
   margin: 0;
   background-color: black;
-  color: rgb(86, 86, 86);
+  color: rgb(105, 100, 100);
+  font-size: 3rem;
   font-family: Copperplate;
   overflow: hidden;
+}
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
