--- a/style.css
+++ b/style.css
@@ -19,3 +19,7 @@ body {
   -ms-user-select: none;
   user-select: none;
 }
+.light-mode {
+  background-color: white(255, 255, 255);
+  color: white;
+}
