--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@
 body {
   margin: 0;
   background-color: black;
-  color: rgb(105, 100, 100);
+  color:white;
   font-size: 3rem;
   font-family: Copperplate;
   overflow: hidden;
+}
+body.white {
+  background-color: white;
+  color: black;
 }
 .noselect {
   -webkit-touch-callout: none;
