--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@ body {
   font-size: 3rem;
   font-family: Copperplate;
   overflow: hidden;
-  transition: background-color 0.5s;
+  transition: all 0.5s ease-in;
 }
 body.white {
   background-color: #eece98;
