--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@ body {
   background-color: black;
   color: #eece98;
   font-size: 3rem;
-  font-family: Copperplate;
+  font-family: "Rajdhani", sans-serif;
   overflow: hidden;
   transition: all 0.5s ease-in;
 }
